Create api documentation for update product
