# storage/api-docs/api-docs.json
@@ -171,6 +171,70 @@
                         "description": "Ha ocurrido un error."
                     }
                 }
+            },
+            "put": {
+                "tags": [
+                    "products"
+                ],
+                "summary": "Update product",
+                "description": "Update the specified resource in storage.",
+                "operationId": "c474d1318e5b8c3de1f4d52b6053111f",
+                "parameters": [
+                    {
+                        "name": "product",
+                        "in": "path",
+                        "description": "Product ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "code",
+                                    "price"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "code": {
+                                        "type": "string"
+                                    },
+                                    "price": {
+                                        "type": "number"
+                                    },
+                                    "dimensions": {
+                                        "type": "string"
+                                    },
+                                    "colors": {
+                                        "type": "string"
+                                    },
+                                    "tags": {
+                                        "type": "string"
+                                    },
+                                    "stock": {
+                                        "type": "number"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Show product created."
+                    },
+                    "400": {
+                        "description": "Error."
+                    }
+                }
             }
         }
     }
